# walletkit-python

./: .gitignore  CHANGELOG.md  ISSUE_GROUPS.md  LICENSE  LICENSE-DOCS  README.md  authmsg_capture.json  coverage.xml  issue-14-solution.md  issue-15-solution.md  issue-22-solution.md  issue-23-solution.md  issue-24-solution.md  issue_27_close.md  issue_27_solution.md  issue_28_close.md  issue_28_solution.md  issue_29_close.md  issue_29_solution.md  issue_41_solution.md  issue_42_solution.md  issue_43_solution.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_venice_test.py  setup.py  tmp_wc_vec.json  wc_capture.jsonl
.github/: FUNDING.yml
docs/: API.md  COMPLETION_SUMMARY.md  README.md  USAGE.md  WALLET_SETUP.md  api-compatibility.md  architecture-analysis.md  code-audit.md  dependencies-analysis.md  dependency-deep-dive.md  implementation-notes.md  port-plan.md  project-plan.md  python-mapping.md  reference-implementations.md  research-findings.md  research-needed.md  testing-strategy.md  windows-integration-testing-setup.md
examples/: README.md  basic_wallet.py  dapp_simulator.py  full_flow.py
js/: compare_authmsg.mjs  decode_capture.mjs  derive_compare.mjs  list_crypto_exports.mjs  list_utils_exports.mjs  package-lock.json  print_engine_opts.mjs
src/walletkit/: __init__.py  client.py  core.py  exceptions.py
src/walletkit/constants/: __init__.py  client.py  crypto.py  timing.py
src/walletkit/controllers/: __init__.py  crypto.py  echo_client.py  engine.py  event_client.py  expirer.py  keychain.py  pairing.py  proposal_store.py  relayer.py  request_store.py  session_store.py  sign_client.py  sign_message_handler.py  store.py
src/walletkit/types/: __init__.py  client.py  core.py  engine.py  logger.py  session.py
src/walletkit/utils/: __init__.py  crypto_utils.py  decorators.py  ethereum_signing.py  events.py  jsonrpc.py  notifications.py  storage.py  uri.py
tests/: conftest.py
tests/integration/: conftest.py  test_error_recovery.py  test_eth_account_demo.py  test_protocol_compatibility.py  test_sign_flow.py  test_venice_ai_example.py
tests/shared/: fixtures.py
tests/unit/: test_client.py  test_core_extended.py  test_crypto_controller.py  test_crypto_property_based.py  test_crypto_utils.py  test_crypto_utils_comprehensive.py  test_crypto_utils_extended.py  test_echo_client_extended.py  test_engine.py  test_event_client_extended.py  test_events.py  test_events_comprehensive.py  test_events_edge_cases.py  test_events_extended.py  test_expirer.py  test_expirer_extended.py  test_jsonrpc.py  test_jsonrpc_comprehensive.py  test_jsonrpc_extended.py  test_keychain_comprehensive.py  test_keychain_delete_edge_case.py  test_keychain_error_paths.py  test_keychain_extended.py  test_notifications.py  test_pairing.py  test_protocol_compatibility.py  test_relayer.py  test_relayer_error_paths.py  test_request_store_comprehensive.py  test_request_store_extended.py  test_request_store_restore.py  test_sign_client.py  test_storage.py  test_storage_extended.py  test_storage_final.py  test_store.py  test_store_comprehensive.py  test_store_edge_cases.py  test_store_error_paths.py  test_store_extended.py  (+7 more)
