[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walletkit"
version = "0.1.0"
description = "Python port of the WalletKit SDK for WalletConnect Protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Mark Rizzn Hopkins"}
]
keywords = ["walletconnect", "wallet", "crypto", "blockchain", "ethereum", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    # WebSocket support for WalletConnect relay communication
    "websockets>=11.0.0,<14.0.0",
    # Cryptographic operations (X25519, Ed25519, ChaCha20Poly1305, HKDF)
    "cryptography>=41.0.0,<44.0.0",
]

[project.optional-dependencies]
# Development tools (code formatting, linting, type checking)
dev = [
    "black>=23.7.0,<25.0.0",
    "flake8>=6.1.0,<8.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
]
# Testing tools
test = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<0.25.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    # Browser automation for integration testing
    "playwright>=1.40.0,<2.0.0",
    # QR Code handling for WalletConnect URI extraction
    "qrcode[pil]>=7.4.2,<8.0.0",
    "pillow>=10.0.0,<12.0.0",
    # Ethereum signing for wallet message signing (required for venice.ai)
    "eth-account>=0.8.0,<1.0.0",
    # Type stubs
    "types-requests>=2.31.0,<3.0.0",
]
# Documentation tools
docs = [
    "sphinx>=7.1.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]
# Storage backends
storage = [
    "aiosqlite>=0.19.0,<0.20.0",
]
# Security auditing
security = [
    "pip-audit>=2.6.0,<3.0.0",
]
# All development dependencies (dev + test + docs + security)
# Note: This is a convenience group that includes all dev dependencies
# Install with: pip install -e ".[all-dev]"
all-dev = [
    "black>=23.7.0,<25.0.0",
    "flake8>=6.1.0,<8.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<0.25.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "playwright>=1.40.0,<2.0.0",
    "qrcode[pil]>=7.4.2,<8.0.0",
    "pillow>=10.0.0,<12.0.0",
    "eth-account>=0.8.0,<1.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "sphinx>=7.1.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "pip-audit>=2.6.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/reown/walletkit-python"
Documentation = "https://github.com/reown/walletkit-python#readme"
Repository = "https://github.com/reown/walletkit-python"
Issues = "https://github.com/reown/walletkit-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

addopts = [
    "--cov=walletkit",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "-v",
]

markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "protocol: Protocol compatibility tests",
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

